force-app/main/default/objects/Brick__c/Brick__c.object-meta.xml
<CustomObject>
    <label>Brick</label>
    <nameField>
        <label>Brick Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bricks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>