force-app/main/default/objects/Brick__c/fields/Brick_Code__c.field-meta.xml
<CustomField>
    <fullName>Brick_Code__c</fullName>
    <description>IQVIA IMS-style brick code (e.g. EG-10101).</description>
    <label>Brick Code</label>
    <length>32</length>
    <type>Text</type>
</CustomField>