force-app/main/default/objects/Brick__c/fields/Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Data_Source__c</fullName>
    <description>Primary sell-out data vendor for this brick geography.</description>
    <label>Data Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IQVIA IMS</fullName>
                <default>true</default>
                <label>IQVIA IMS</label>
            </value>
            <value>
                <fullName>IbnSina</fullName>
            </value>
            <value>
                <fullName>Pharmaoverseas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>