force-app/main/default/objects/Brick__c/fields/Governorate__c.field-meta.xml
<CustomField>
    <fullName>Governorate__c</fullName>
    <label>Governorate</label>
    <length>80</length>
    <type>Text</type>
</CustomField>