force-app/main/default/objects/Brick__c/fields/Territory2_Id__c.field-meta.xml
<CustomField>
    <fullName>Territory2_Id__c</fullName>
    <description>Optional Territory2 Id for cross-filtering analytics.</description>
    <label>Territory2 Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>